--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -169,6 +169,7 @@ img {
     var(--second-color) 0%,
     var(--first-color) 100%
   );
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -199,6 +200,7 @@ img {
     var(--second-color) 0%,
     var(--first-color) 100%
   );
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -245,7 +247,7 @@ img {
   animation: float-eth 2s ease-in-out infinite;
 }
 .home-img-orb {
-  filter: drop-shadow(0 4px 32px hsla(203, 71%, 60%, 0.5));
+  width:280px;
   justify-self: center;
 }
 
@@ -352,15 +354,15 @@ img {
   50%{
     transform: translateY(2rem);  
   }
-  50%{
+  100%{
     transform: translateY(.5rem);  
   }
 }
-/*=============== BREAKPOINTS ===============*/
+/* =============== BREAKPOINTS =============== */
 /* For small devices */
-@media screen and (max-width: 367px){
+ @media screen and (max-width: 367px){
   .container{
-    margin-inline-start: 1rem;
+    margin-inline: .5rem;
   }
   .home-img-eth{
     width: 80px;
@@ -370,6 +372,7 @@ img {
   }
   .home-data{
     width:.5rem;
+
   }
 
   .home-footer{
@@ -382,6 +385,7 @@ img {
 @media screen and (min-width: 767px){
   .nav{
     height: calc(var(--header-height)+1.5rem);
+    padding: 1rem;
   }
 
   .nav-toggle,.nav-close,.nav-img{
@@ -394,13 +398,82 @@ img {
   }
 
   .home-container{
-   
     display: grid;
     grid-template-columns: repeat(2,max-content);
     align-content: center;
     justify-content: center;
-    gap:2rem;
+    gap:2rem 4rem;
+  
+  }
+
+  .home-group{
+    grid-row: 1/3;
+    grid-column: 2/3;
+    align-self: center;
+  }
+} 
+/* For large devices */
+
+@media screen and (min-width: 1024px) {
+  .home-title{
+    margin-bottom: 1rem;
+  }
+
+  .home-description{
+    margin-bottom: 3rem;
+  }
+
+  .home-img-orb{
+    width: 500px;
+  }
+  .home-img-eth{
+    width: 200px;
+  }
+  .home-data{
+    top: 3rem;
+    right: 0;
+    row-gap: 2.5rem;
+  }
+
+  .home-shape-small,.home-shape-big1,
+  .home-shape-big2{
+    filter: blur(132px);
+  }
+
+  .home-shape-small{
+    width: 300px;
+    height: 300px;
+    top: -5rem;
+    left: -2rem;
+  }
+  .home-shape-big1,.home-shape-big2{
+    width: 400px;
+    height: 400px;
+  }
+
+  .home-shape-big1{
+    top:10rem;
+    right: -3.5rem;
+  }
+  .home-shape-big2{
+    left: 14rem;
+    bottom: -10rem;
+
   }
 }
-/* For large devices */
+
+@media screen and (min-width: 1048px){
+  .container{
+    margin-inline:auto ;
+  }
+}
+
+@media screen and (min-width: 1500px){
+  .home-shape-big2{
+    left: 28rem;
+  
+  }
+}
+
+
 
